<?xml version="1.0" encoding="utf-8"?>

<!--    Definición de LinearLayout padre con sus parámetros:
        - Ancho
        - Alto
        - Orientación
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<!--    Definición de LinearLayout con sus parámetros:
        - Ancho
        - Alto
        - Orientación
-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

<!--    Definición de Toolbar dentro de LinearLayout (horizontal) con sus parámetros:
        - id
        - Ancho
        - Alto
        - Peso (tamaño que ocupa en base a tamaño del resto de elementos)
        - Color de fondo
        - Elevación
        - Tema
        - Título
        - Color de letra del título
-->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/Barra"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="@color/light_black"
            android:elevation="4dp"
            android:theme="?attr/actionBarTheme"
            app:title="@string/textoBarra"
            app:titleTextColor="@color/white" />

<!--    Definición de ImageView dentro de LinearLayout (horizontal) con sus parámetros:
        - id
        - Ancho
        - Alto
        - Peso (tamaño que ocupa en base a tamaño del resto de elementos)
        - Descripción del contenido
        - Acción al pulsar
        - Contenido
-->

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="87dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/ContenidoTresPuntos"
            android:onClick="showPopupL"
            app:srcCompat="@drawable/tres_puntos" />

    </LinearLayout>

<!--    Definición de TextView con sus parámetros:
        - id
        - Ancho
        - Alto
        - Gravedad del layout
        - Peso (tamaño que ocupa en base a tamaño del resto de elementos)
        - Relleno
        - Texto
        - Formato de texto
-->

    <TextView
        android:id="@+id/textoConectar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:padding="50dp"
        android:text="@string/textoConectar"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

<!--    Definición de EditView con sus parámetros:
            - id
            - Ancho
            - Alto
            - Gravedad del layout
            - Peso (tamaño que ocupa en base a tamaño del resto de elementos)
            - Texto
            - Tipo de texto a introducir
            - Relleno
-->

    <EditText
        android:id="@+id/entradaUsuario"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:hint="@string/textoCorreo"
        android:inputType="text"
        android:padding="50dp" />

<!--    Definición de EditView con sus parámetros:
            - id
            - Ancho
            - Alto
            - Gravedad del layout
            - Peso (tamaño que ocupa en base a tamaño del resto de elementos)
            - Tamaño de caracter
            - Texto
            - Tipo de texto a introducir
            - Relleno
-->

    <EditText
        android:id="@+id/entradaContrasena"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/textoContrasena"
        android:inputType="text|textPassword"
        android:padding="50dp" />

<!--    Definición de Button con sus parámetros:
        - id
        - Estilo
        - Ancho
        - Alto
        - Gravedad
        - Peso (tamaño que ocupa en base a tamaño del resto de elementos)
        - Gravedad del layout
        - Relleno
        - Texto
        - Texto en mayúsculas
        - Color de texto
        - Color de fondo del botón
-->

    <Button
        android:id="@+id/inicioSesion"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:padding="50dp"
        android:text="@string/textoInicioSesion"
        android:textAllCaps="true"
        android:textColor="@color/black"
        app:backgroundTint="@color/material_dynamic_neutral80" />

<!--    Definición de TextView con sus parámetros:
        - id
        - Ancho
        - Alto
        - Gravedad dentro del layout
        - Peso (tamaño que ocupa en base al resto de elementos)
        - Gravedad
        - Texto
        - Formato de texto
        - Color de texto
-->

    <TextView
        android:id="@+id/textoOlvidoContrasena"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:padding="50dp"
        android:text="@string/textoOlvidoContrasena"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/letraAzul" />

    <Button
        android:id="@+id/botonVuelta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botonVuelta" />
</LinearLayout>